--- a/Services/Ordering/Ordering.Api/appsettings.json
+++ b/Services/Ordering/Ordering.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "Database": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True"
+    //"Database": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OrderDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
