--- a/Services/Ordering/Ordering.Api/appsettings.json
+++ b/Services/Ordering/Ordering.Api/appsettings.json
@@ -3,6 +3,14 @@
     "Database": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True"
     //"Database": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OrderDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "UserName": "guest",
+    "Password": "guest"
+  },
+  "FeatureManagement": {
+    "OrderFullfilment": false
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
